BJS2-27265 Удаление прошедших событий